--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+/* .App-header {
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row; 
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  margin-top:20vh;
+} */
+
+.App-header{
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.form-section{
+  display:block;
+
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-section{
+  text-align: center;
+  color:white;
+  margin-top: 5%;
+  display: block;
+}
+
+.profile-photo{
+  margin-bottom: 5%;
+  max-height: 20vh;
 }
